modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
   <!-- end service section -->
 
-  <!-- fruits section -->
+  <!-- About section -->
 
   <section class="fruit_section">
     <div class="container">
@@ -285,11 +285,7 @@
               and cleanliness are our top priorities; we adhere to the highest standards of safety 
               and sanitation so you can express yourself with confidence.
             </p>
-            <!-- <div>
-              <a href="#" class="custom_dark-btn">
-                Contact us
-              </a>
-            </div> -->
+
           </div>
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
@@ -298,37 +294,14 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row layout_padding2-top layout_padding-bottom">
-        <div class="col-md-8">
-          <div class="fruit_detail-box">
-            <h3>
-              Best Fresh Gauva
-            </h3>
-            <p class="mt-4 mb-5">
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly believable. If you are going to use a passage of Lorem
-              Ipsum, you need to be
-            </p>
-            <div>
-              <a href="" class="custom_dark-btn">
-                Buy Now
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <div class="fruit_img-box d-flex justify-content-center align-items-center">
-            <img src="images/gauva.png" alt="" class="" width="250px" />
-          </div>
-        </div> -->
+
       </div>
     </div>
   </section>
 
-  <!-- end fruits section -->
+  <!-- end About section -->
 
-  <!-- tasty section -->
+  <!-- Flex section -->
   <section class="tasty_section">
     <div class="container_fluid">
       <h2>
@@ -337,7 +310,7 @@
     </div>
   </section>
 
-  <!-- end tasty section -->
+  <!-- end Flex section -->
 
   <!-- client section -->
 
