modified:   aboutus.html 	new file:   artgallery.html 	modified:   contact.html 	modified:   css/style.css 	modified:   faqs.html 	new file:   images/LTAT.logo.jpg 	modified:   index.html 	modified:   service.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-          <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="action" /></a>
+          <a class="navbar-brand" href="index.html"><img src="images/LTAT.logo.jpg" alt="action" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,18 +48,11 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="aboutus.html"> About us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Services </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html"> Contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="faqs.html"> FAQs</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="aboutus.html"> About us</a></li>
+                <li class="nav-item"><a class="nav-link" href="service.html"> Services </a></li>
+                <li class="nav-item"><a class="nav-link" href="artgallery.html"> Art Gallery </a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html"> Contact us</a></li>
+                <li class="nav-item"><a class="nav-link" href="faqs.html"> FAQs</a></li>
               </ul>
             </div>
             <div class="quote_btn-container ml-0 ml-lg-4 d-flex justify-content-center">
@@ -172,14 +165,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="custom_carousel-control">
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="sr-only">Next</span>
-          </a>
-        </div> -->
       </div>
     </section>
 
@@ -199,7 +184,7 @@
           <div class="card">
             <img class="card-img-top" src="images/card-item-1.jpg" alt="Card image cap" />
             <div class="card-body">
-              <h5 class="card-title">Tottoos</h5>
+              <h5 class="card-title">Tattoos</h5>
               <p class="card-text">
                 Tattoo designing is the creative process of developing unique, 
                 meaningful artwork tailored to an individual's style, story, or 
@@ -306,7 +291,7 @@
   <section class="tasty_section">
     <div class="container_fluid">
       <h2>
-        Passionate About Tottoos
+        Passionate About Tattoos
       </h2>
     </div>
   </section>
@@ -322,80 +307,6 @@
         There are many variations of passages of Lorem Ipsum available, but
         the majority have
       </p>
-    </div>
-        <!-- <div id="carouselExampleControls-2" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="client_container layout_padding2">
-                <div class="client_img-box">
-                  <img src="https://lh3.googleusercontent.com/a-/ALV-UjWYtHFuqlaenwDMtV_ijWme5MvWAf-HomyQOgTDJcXUuSGPaXh_=w60-h60-p-rp-mo-br100" alt="" />
-                </div>
-                <div class="client_detail">
-                  <h3>
-                    Johnhex
-                  </h3>
-                  <p class="custom_heading-text">
-                    Got my first tattoo here while i'm visiting India. Very friendly, 
-                    professional and hygenic. Would defenitly recommend. My friend hope 
-                    to be back soon and get some more tattoos.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="client_container layout_padding2">
-                <div class="client_img-box">
-                  <img src="images/client.png" alt="" />
-                </div>
-                <div class="client_detail">
-                  <h3>
-                    Johnhex
-                  </h3>
-                  <p class="custom_heading-text">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in
-                    some form, by injected humour, or randomised words which
-                    don't look even slightly believable. If you are <br />
-                    going to use a passage of Lorem Ipsum, you need to be sure
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="client_container layout_padding2">
-                <div class="client_img-box">
-                  <img src="images/client.png" alt="" />
-                </div>
-                <div class="client_detail">
-                  <h3>
-                    Johnhex
-                  </h3>
-                  <p class="custom_heading-text">
-                    There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in
-                    some form, by injected humour, or randomised words which
-                    don't look even slightly believable. If you are <br />
-                    going to use a passage of Lorem Ipsum, you need to be sure
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="custom_carousel-control">
-            <a class="carousel-control-prev" href="#carouselExampleControls-2" role="button" data-slide="prev">
-              <span class="" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls-2" role="button" data-slide="next">
-              <span class="" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-        </div> -->
-
-        
-      </div>
     </div>
   </section>
 
@@ -431,9 +342,7 @@
                   </button>
                 </div>
               </div>
-
             </div>
-
           </form>
         </div>
       </div>
@@ -486,7 +395,7 @@
           position: fixed;
           width: 50px;
           height: 50px;
-          bottom: 8px; 
+          bottom: 18px; 
           right: 30px;
           background-color: #25D366;
           color: #FFF;
@@ -514,20 +423,20 @@
     <footer>
       <img class="logo" src="images/logo2.JPG" />
       <div class="socials">
-          <a class="fa-brands fa-pinterest"></a>
-          <a class="fa-brands fa-instagram"></a>
-          <a class="fa-brands fa-youtube"></a>
+          <a class="fa-brands fa-pinterest" href="https://www.in.pinterest.com/" target="_blank"></a>
+          <a class="fa-brands fa-instagram" href="https://www.instagram.com/" target="_blank"></a>
+          <a class="fa-brands fa-youtube" href="https://www.youtube.com/" target="_blank"></a>
           <!-- Add more Buttons -->
       </div>
       <div class="links">
           <ul>
               <li><h2>Resources</h2></li>
-              <li><a href="#">Home</a></li>
-              <li><a>About us</a></li>
-              <li><a>Services</a></li>
-              <li><a>Art Gallery</a></li>
-              <li><a>FAQs</a></li>
-              <li><a>Contact us</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutus.html" target="_blank">About Us</a></li>
+              <li><a href="service.html" target="_blank">Services</a></li>
+              <li><a href="artgallery.html" target="_blank">Art Gallery</a></li>
+              <li><a href="faqs.html" target="_blank">FAQs</a></li>
+              <li><a href="contact.html" target="_blank">Contact Us</a></li>
           </ul>
           <ul>
               <li><h2>Piercing</h2></li>
@@ -553,9 +462,10 @@
               <li><a>Tattoos Aftercare Guidance</a></li>
           </ul>
           <ul>
-              <li><h2>Working Hours & Days</h2></li>
+              <li><h2>Studio Timing</h2></li>
               <li><a>Monday to Saturday</a></li>
               <li><a>(10 AM - 6 PM)</a></li>
+              <li><a>Sunday Closed</a></li>
           </ul>
       </div>
   </footer>
@@ -569,7 +479,7 @@
     </p>
   </section>
   <!-- End footer section -->
-  
+
 </body>
 
 </html>
