--- a/aboutus.html
+++ b/aboutus.html
@@ -27,6 +27,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.jpg" alt="" /></a>
+            <img src="images/LTAT.logo.jpg" alt="" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -130,181 +131,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row layout_padding2-top layout_padding-bottom">
-        <div class="col-md-8">
-          <div class="fruit_detail-box">
-            <h3>
-              Best Fresh Gauva
-            </h3>
-            <p class="mt-4 mb-5">
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly believable. If you are going to use a passage of Lorem
-              Ipsum, you need to be
-            </p>
-            <div>
-              <a href="" class="custom_dark-btn">
-                Buy Now
-              </a>
-            </div>
-          </div>
-        </div> 
-        <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <div class="fruit_img-box d-flex justify-content-center align-items-center">
-            <img src="images/gauva.png" alt="" class="" width="250px" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- end fruits section -->
-
-
-  <section class="info_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <h5>
-            Piercing Services
-          </h5>
-          <ul>
-            <li>
-              Ear Lobe
-            </li>
-            <li>
-              Cartilage
-            </li>
-            <li>
-              Nose
-            </li>
-            <li>
-              Eyebrow
-            </li>
-            <li>
-              Lip & Labret
-            </li>
-            <li>
-              Tongue 
-            </li>
-            <li>
-              Navel (Belly Button)
-            </li>
-            <li>
-              Jewelery Change & Aftercare Services
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-3">
-          <h5>
-            Tattoos Services
-          </h5>
-          <ul>
-            <li>
-              Custom Tattoo Design
-            </li>
-            <li>
-              Black & Greay Tattoos
-            </li>
-            <li>
-              Color Tattoos
-            </li>
-            <li>
-              Cover-Up Tattoos
-            </li>
-            <li>
-              Fine Line Tottoos
-            </li>
-            <li>
-              Realism & Portrait Tattoos
-            </li>
-            <li>
-              Tattoo Touch-Ups
-            </li>
-            <li>
-              Tattoo Aftercare Guidance
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-3">
-          <h5>
-            List
-          </h5>
-          <ul>
-            <li>
-              randomised
-            </li>
-            <li>
-              words which
-            </li>
-            <li>
-              don't look even
-            </li>
-            <li>
-              slightly
-            </li>
-            <li>
-              believable. If you
-            </li>
-            <li>
-              are going to use
-            </li>
-            <li>
-              a passage of
-            </li>
-            <li>
-              Lorem Ipsum,
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-3">
-          <div class="social_container">
-            <h5>
-              Follow Us
-            </h5>
-            <div class="social-box">
-              <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-
-              <!-- <a href="">
-                <img src="images/twitter.png" alt="">
-              </a> -->
-              <a href="">
-                <img src="images/instagram.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/youtube.png" alt="">
-              </a>
-            </div>
-          </div>
-          <div class="subscribe_container">
-            <h5>
-              Subscribe Now
-            </h5>
-            <div class="form_container">
-              <form action="">
-                <input type="email">
-                <button type="submit">
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      Copyright &copy; 2025 All Rights Reserved By
-      <a href="https://html.design/">Living Through Art Tattoos</a>
-    </p>
-  </section>
 
   <!-- WhatsApp Button -->
 <div>  
@@ -340,38 +166,67 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </div>
     <!-- End Whatsapp Button -->
+
+    <!-- Main Footer Start -->
+    <footer>
+      <img class="logo" src="images/logo2.JPG" />
+      <div class="socials">
+          <a class="fa-brands fa-pinterest" href="https://www.in.pinterest.com/" target="_blank"></a>
+          <a class="fa-brands fa-instagram" href="https://www.instagram.com/" target="_blank"></a>
+          <a class="fa-brands fa-youtube" href="https://www.youtube.com/" target="_blank"></a>
+          <!-- Add more Buttons -->
+      </div>
+      <div class="links">
+          <ul>
+              <li><h2>Resources</h2></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutus.html" target="_blank">About Us</a></li>
+              <li><a href="service.html" target="_blank">Services</a></li>
+              <li><a href="artgallery.html" target="_blank">Art Gallery</a></li>
+              <li><a href="faqs.html" target="_blank">FAQs</a></li>
+              <li><a href="contact.html" target="_blank">Contact Us</a></li>
+          </ul>
+          <ul>
+              <li><h2>Piercing</h2></li>
+              <li><a>Ear Lobe</a></li>
+              <li><a>Cartilage</a></li>
+              <li><a>Nose</a></li>
+              <li><a>Eyebrow</a></li>
+              <li><a>Lips & Labret</a></li>
+              <li><a>Tongue</a></li>
+              <li><a>Navel(Belly Button)</a></li>
+              <li><a>Jewelery Care & After Care</a></li>
+              <!-- Add more list items-->
+          </ul>
+          <ul>
+              <li><h2>Tattoos</h2></li>
+              <li><a>Color Tattoos</a></li>
+              <li><a>Fine Lines Tattoos</a></li>
+              <li><a>Tattoos Touch-ups</a></li>
+              <li><a>Cover-ups Tattoos</a></li>
+              <li><a>Black & Grey Tattoos</a></li>
+              <li><a>Custom Tattoos Design</a></li>
+              <li><a>Realism & Portraits Tattoos</a></li>
+              <li><a>Tattoos Aftercare Guidance</a></li>
+          </ul>
+          <ul>
+              <li><h2>Studio Timing</h2></li>
+              <li><a>Monday to Saturday</a></li>
+              <li><a>(10 AM - 6 PM)</a></li>
+          </ul>
+      </div>
+  </footer>
+    <!-- Main Footer End -->
+
   <!-- footer section -->
-
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-
-  <!-- <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 11,
-        center: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-      });
-
-      var image = 'images/maps-and-flags.png';
-      var beachMarker = new google.maps.Marker({
-        position: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-        map: map,
-        icon: image
-      });
-    }
-  </script> -->
-  <!-- google map js -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
+  <section class="container-fluid footer_section">
+    <p>
+      Copyright &copy; 2025 All Rights Reserved By
+      <a href="index.html">Living Through Art Tattoos</a>
+    </p>
+  </section>
+  <!-- End footer section -->
+  
 </body>
 
 </html>
