modified:   faqs.html

--- a/faqs.html
+++ b/faqs.html
@@ -182,7 +182,8 @@
           <input type="checkbox" id="q2">
           <label for="q2" class="faq-label">What type of services are provided at your place?</label>
           <div class="faq-content">
-            Permanent Tattoos and Piercings (I would want to elaborate a bit)
+            We, Living through Art Tattoos, expertise in a range of different style of tattooing which includes realism, fineline and many more common and loveable styles that the masses prefer and also piercings which may range from standard ear lobes to cartilage, nose piercing to the more intricate septum and inner ear piercings and body piercings of kind, done with surgical needles. 
+
           </div>
         </div>
     
