--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-          <a class="navbar-brand" href="index.html"><img src="images/LTAT.logo.jpg" alt="action" /></a>
+          <a class="navbar-brand" href="index.html"><img src="images/LTAT.logo.png" alt="action" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="aboutus.html"> About us</a></li>
                 <li class="nav-item"><a class="nav-link" href="service.html"> Services </a></li>
-                <li class="nav-item"><a class="nav-link" href="artgallery.html"> Art Gallery </a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="artgallery.html"> Art Gallery </a></li> -->
                 <li class="nav-item"><a class="nav-link" href="contact.html"> Contact us</a></li>
                 <li class="nav-item"><a class="nav-link" href="faqs.html"> FAQs</a></li>
               </ul>
@@ -406,6 +406,7 @@
           z-index: 100;
         }
         .whatsapp-float:hover {
+          color: #25D366;
           background-color: #FFF;
         }
         
@@ -418,6 +419,38 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </div>
     <!-- End Whatsapp Button -->
+
+    <!-- Call Button -->
+    <div>
+      <a href="tel:+91 7570903554" class="call-button" traget="_blank">
+      <i class="fa fa-phone"></i></a>
+
+      <style>
+          .call-button {
+              position: fixed;
+              width: 50px;
+              height: 50px;
+              bottom: 75px;
+              right: 30px;
+              background-color: rgb(0, 174, 255);
+              color: #ffffff;
+              border-radius: 40px;
+              text-align: center;
+              font-size: 35px;
+              box-shadow: 2px 2px 3px #999;
+              z-index: 100;
+          }
+      
+          .call-button:hover {
+            color: rgb(1, 193, 193);
+            background-color: #ffffff;}
+          .call-button {
+           margin-top: 6px;
+          }
+      </style>   
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </div>
+  <!-- End Call Button -->
 
     <!-- Main Footer Start -->
     <footer>
