modified:   index.html

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
     <!-- Main Footer Start -->
     <footer>
-      <img class="logo" src="images/logo2.JPG" />
+      <img class="logo" src="images/LTAT.logo.png" />
       <div class="socials">
           <a class="fa-brands fa-pinterest" href="https://www.in.pinterest.com/" target="_blank"></a>
           <a class="fa-brands fa-instagram" href="https://www.instagram.com/" target="_blank"></a>
