modified:   aboutus.html 	modified:   contact.html 	modified:   css/style.css 	modified:   faqs.html 	modified:   index.html 	modified:   service.html

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
               </p>
             </div>
           </div> -->
-        </div>
-      </div>
+        <!-- </div>
+      </div> -->
       <!-- <div class="d-flex justify-content-center">
         <a href="" class="custom_dark-btn">
           Read More
@@ -300,7 +300,7 @@
 
   <!-- client section -->
 
-  <section class="client_section layout_padding">
+  <!-- <section class="client_section layout_padding">
     <div class="container">
       <h2 class="custom_heading">Testimonial</h2>
       <p class="custom_heading-text">
@@ -308,7 +308,180 @@
         the majority have
       </p>
     </div>
-  </section>
+  </section> -->
+
+  <!-- Start Testimonials -->
+<section class="testimonials">
+  <h2>What Our Clients Say</h2>
+  <div class="testimonial-carousel">
+
+    <div class="testimonial-card">
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjWYtHFuqlaenwDMtV_ijWme5MvWAf-HomyQOgTDJcXUuSGPaXh_=w90-h90-p-rp-mo-br100" alt="Client Photo" />
+      <h3>Christopher</h3>
+      <p class="company">Living Through Art Tattoos</p>
+      <div class="stars" aria-label="5 stars"></div>
+      <p class="feedback">Got my first tattoo here while i'm visiting India. Very friendly, professional and hygenic. Would defenitly recommend. My friend hope to be back soon and get some more tattoos</p>
+    </div>
+
+    <div class="testimonial-card">
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjV4FpFp9fhvi1jA7Q4rLmHE6BX-oJAYfvDew6_FNh7NX5ofOft8=w90-h90-p-rp-mo-br100" alt="Client Photo" />
+      <h3>Devika Muradia</h3>
+      <p class="company">Living Through Art Tattoos</p>
+      <div class="stars" aria-label="5 stars"></div>
+      <p class="feedback">Got my first tattoo here — and I’m so glad I did! 😍
+
+        I had a great experience getting my very first tattoo at Living Through Art studio. From the moment I walked in, I could feel the calm, creative energy of the place. It’s beautifully set up, super neat and hygienic, and has this really welcoming vibe that instantly makes you feel good.</p>
+    </div>
+
+    <div class="testimonial-card">
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjWbIkc41U_toFj_W3r5q8dju-cztQVsaHIF3q-5sTQM25wg8iZv=w90-h90-p-rp-mo-br100" alt="Client Photo" />
+      <h3>Shalini Sharma</h3>
+      <p class="company">Living Through Art Tattoos</p>
+      <div class="stars" aria-label="5 stars"></div>
+      <p class="feedback">This place is amazing and their service are mind blowing.
+        I like their design and well mannered staff.
+        Amazing tattoo artist, very cozy place, Price is top as well.</p>
+    </div>
+
+    <div class="testimonial-card">
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjUJac0b40pyP0K443xh_wr99T24VSmzZmRydaFwcpxpFzNjN4k=w90-h90-p-rp-mo-br100" alt="Client Photo" />
+      <h3>seoji Kim</h3>
+      <p class="company">Living Through Art Tattoos</p>
+      <div class="stars" aria-label="5 stars"></div>
+      <p class="feedback">Beautiful work done
+        With hygiene in mind and proper consultation
+        I really loved the calm environment and energy of the studio
+        Have gotten 3 tattoos so far and there was no room for disappointment in any of them.</p>
+    </div>
+
+    <div class="testimonial-card">
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjX820KrJ0Cj8z_ImHr2OlDFyisANnKAqZYwluGe2KJXPUgKk6Rt=w90-h90-p-rp-mo-br100" alt="Client Photo" />
+      <h3>SALONI ROHILLA</h3>
+      <p class="company">Living Through Art Tattoos</p>
+      <div class="stars" aria-label="5 stars"></div>
+      <p class="feedback">I had an incredible experience! The tattoo artist perfectly captured my vision with stunning detail. The studio's cleanliness, professionalism, and welcoming atmosphere made for a truly exceptional visit. Highly recommended!</p>
+    </div>
+
+    <div class="testimonial-card">
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjX-yK7FV4zoc1etR1jOXIJ1q9FYJ5w96VcnZsr_fn9Y9lVhJofw=w72-h72-p-rp-mo-br100" alt="Client Photo" />
+      <h3>Jaya Kerketta</h3>
+      <p class="company">Living Through Art Tattoos</p>
+      <div class="stars" aria-label="5 stars"></div>
+      <p class="feedback">Tushar was amazing. His behaviour and professionalism is at point. Had done a nose piercing and he made the process super easy and comfortable. Thank you.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<style>
+.testimonials {
+  background: #f7fafc;
+  padding: 50px 20px;
+  text-align: center;
+  font-family: "Segoe UI", sans-serif;
+}
+
+.testimonials h2 {
+  font-size: 2rem;
+  margin-bottom: 30px;
+  color: #333;
+}
+
+.testimonial-carousel {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 20px;
+  padding-bottom: 10px;
+  -webkit-overflow-scrolling: touch;
+}
+
+.testimonial-card {
+  background: #fff;
+  border-radius: 15px;
+  flex: 0 0 280px;
+  padding: 20px;
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+  scroll-snap-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+  cursor: pointer;
+  text-align: center;
+}
+
+.testimonial-card:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 10px rgba(60, 60, 60, 0.834);
+  opacity: 0.9;
+}
+
+.testimonial-card:hover {
+  transform: translateY(-10px);
+}
+
+.client-photo {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 12px;
+}
+
+.testimonial-card h3 {
+  margin: 8px 0 4px;
+  font-size: 1.1rem;
+  color: #222;
+}
+
+.testimonial-card .company {
+  font-size: 0.9rem;
+  color: #777;
+  margin-bottom: 10px;
+}
+
+.stars {
+  display: inline-block;
+  font-size: 1.2rem;
+  color: #f1b100;
+  margin-bottom: 10px;
+  position: relative;
+}
+.stars::before {
+  content: "★★★★★";
+  letter-spacing: 2px;
+  animation: starFade 1.2s ease-in-out infinite alternate;
+}
+
+@keyframes starFade {
+  0% { opacity: 0.5; transform: scale(0.95); }
+  100% { opacity: 1; transform: scale(1); }
+}
+
+.feedback {
+  font-size: 0.95rem;
+  color: #444;
+  line-height: 1.5;
+}
+
+/* Scrollbar styling for WebKit (Chrome, Safari) */
+.testimonial-carousel::-webkit-scrollbar {
+  height: 6px;
+}
+.testimonial-carousel::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 10px;
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  .testimonial-card {
+    flex: 0 0 85%;
+  }
+}
+</style>
+
+
+<!-- End Testimonals -->
 
   <!-- end client section -->
 
