modified:   aboutus.html 	modified:   artgallery.html 	modified:   contact.html 	modified:   faqs.html 	modified:   index.html 	modified:   service.html

--- a/artgallery.html
+++ b/artgallery.html
@@ -78,6 +78,7 @@
       body {
         margin: 0;
         padding: 20px;
+        padding-bottom: 20px;
         background: #f9f9f9;
         font-family: Arial, sans-serif;
       }
@@ -86,6 +87,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 15px;
+        padding-bottom: 25px;
       }
   
       .image-grid img {
@@ -141,15 +143,15 @@
     </style>
   
     <div class="image-grid">
-      <img src="assets/img/gallery/gallery1.jpg" alt="Image 1">
-      <img src="assets/img/gallery/gallery2.jpg" alt="Image 2">
-      <img src="assets/img/gallery/gallery3.jpg" alt="Image 3">
-      <img src="assets/img/gallery/gallery4.jpg" alt="Image 4">
-      <img src="assets/img/gallery/gallery5.jpg" alt="Image 5">
-      <img src="assets/img/gallery/gallery6.jpg" alt="Image 6">
-      <img src="assets/img/gallery/gallery7.jpg" alt="Image 7">
-      <img src="assets/img/gallery/gallery8.jpg" alt="Image 8">
-      <img src="assets/img/gallery/gallery9.jpg" alt="Image 9"></div>
+      <img src="Gallery/01.jpg" alt="Image 1">
+      <img src="Gallery/02.jpg" alt="Image 2">
+      <img src="Gallery/03.jpg" alt="Image 3">
+      <img src="Gallery/04.jpg" alt="Image 4">
+      <img src="Gallery/05.jpg" alt="Image 5">
+      <img src="Gallery/06.jpg" alt="Image 6">
+      <img src="Gallery/07.jpg" alt="Image 7">
+      <img src="Gallery/08.jpg" alt="Image 8">
+      <img src="Gallery/09.jpg" alt="Image 9"></div>
 
     <!-- End Art Gallery -->
 
