--- a/aboutus.html
+++ b/aboutus.html
@@ -55,6 +55,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="service.html" target="_blank"> Services </a>
                 </li>
+                <li class="nav-item"><a class="nav-link" href="artgallery.html"> Art Gallery </a></li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html" target="_blank">Contact us</a>
                 </li>
