--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
@@ -55,6 +55,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="service.html" target="_blank"> Services </a>
                 </li>
+                <li class="nav-item"><a class="nav-link" href="artgallery.html"> Art Gallery </a></li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html" target="_blank">Contact us</a>
                 </li>
