--- a/service.html
+++ b/service.html
@@ -49,16 +49,11 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="aboutus.html" target="_blank"> About us</a></li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="service.html" target="_blank"> Services </a></li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html" target="_blank">Contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="faqs.html" target="_blank"> FAQs</a>
-                </li>
+                  <li class="nav-item"><a class="nav-link" href="aboutus.html" target="_blank"> About us</a></li>
+                  <li class="nav-item"><a class="nav-link" href="service.html" target="_blank"> Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="artgallery.html"> Art Gallery </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact us</a></li>
+                  <li class="nav-item"><a class="nav-link" href="faqs.html" target="_blank"> FAQs</a></li>
               </ul>
               
             </div>
