modified:   contact.html

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Tropiko</title>
+  <title>Living through Art Tattoos | Contact Us</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
