--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
   <!-- ? Preloader Start -->
-  <div id="preloader-active">
+  <!-- <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="preloader-inner position-relative">
             <div class="preloader-circle"></div>
@@ -46,7 +46,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Preloader Start -->
   <div class="hero_area">
     <!-- header section strats -->
@@ -371,17 +371,6 @@
   </section>
 
   <!-- end fruits section -->
-
-  <!-- Passionate section -->
-  <section class="passionate_section">
-    <div class="container_fluid">
-      <h2>
-        Passionate About Tattoos
-      </h2>
-    </div>
-  </section>
-
-  <!-- end Passionate section -->
 
   <!-- Start Testimonials -->
 <section class="testimonials">
@@ -803,7 +792,7 @@
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
   </script> -->
   <!-- end google map js -->
-  <script>
+  <!-- <script>
     window.addEventListener('load', function () {
       const preloader = document.querySelector('.preloader');
       preloader.style.opacity = '0';
@@ -811,7 +800,7 @@
         preloader.style.display = 'none';
       }, 600); // matches the .6s CSS transition
     });
-  </script>
+  </script> -->
   
 </body>
 
