--- a/artgallery.html
+++ b/artgallery.html
@@ -36,7 +36,7 @@
 
 <body>
   <!-- ? Preloader Start -->
-  <div id="preloader-active">
+  <!-- <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="preloader-inner position-relative">
             <div class="preloader-circle"></div>
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Preloader Start -->
   <div class="hero_area">
     <!-- header section strats -->
@@ -351,7 +351,7 @@
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
     </script> -->
     <!-- end google map js -->
-    <script>
+    <!-- <script>
       window.addEventListener('load', function () {
         const preloader = document.querySelector('.preloader');
         preloader.style.opacity = '0';
@@ -359,7 +359,7 @@
           preloader.style.display = 'none';
         }, 600); // matches the .6s CSS transition
       });
-    </script>
+    </script> -->
   </body>
   
   </html>
