--- a/faqs.html
+++ b/faqs.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- ? Preloader Start -->
-  <div id="preloader-active">
+  <!-- <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="preloader-inner position-relative">
             <div class="preloader-circle"></div>
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Preloader Start -->
   <div class="hero_area sub_pages">
     <!-- header section strats -->
@@ -447,7 +447,7 @@ question.addEventListener('click', () => {
       <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
       </script> -->
       <!-- end google map js -->
-      <script>
+      <!-- <script>
         window.addEventListener('load', function () {
           const preloader = document.querySelector('.preloader');
           preloader.style.opacity = '0';
@@ -455,7 +455,7 @@ question.addEventListener('click', () => {
             preloader.style.display = 'none';
           }, 600); // matches the .6s CSS transition
         });
-      </script>
+      </script> -->
     </body>
     
     </html>
