modified:   contact.html

--- a/contact.html
+++ b/contact.html
@@ -489,7 +489,7 @@
         preloader.style.display = 'none';
       }, 600); // matches the .6s CSS transition
     });
-  </script>
-</body> -->
+  </script> -->
+</body> 
 
 </html>
