modified:   index.html

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div class=" layout_padding2">
         <div class="card-deck">
           <div class="card">
-            <img class="card-img-top" src="Stuff/card-item-1.jpg" alt="Card image cap" />
+            <img class="card-img-top" src="Stuff/card-item-3.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">Tattoos</h5>
               <p class="card-text">
