modified:   index.html

--- a/index.html
+++ b/index.html
@@ -417,11 +417,11 @@
     </div>
 
     <div class="testimonial-card">
-      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjX820KrJ0Cj8z_ImHr2OlDFyisANnKAqZYwluGe2KJXPUgKk6Rt=w90-h90-p-rp-mo-br100" alt="Client Photo" />
-      <h3>SALONI ROHILLA</h3>
+      <img class="client-photo" src="https://lh3.googleusercontent.com/a-/ALV-UjV-3hpjnSQrcX_Lk4xSAMDjbD_Uyn6og7Rzoc37-NgDIDSI2oo1=w90-h90-p-rp-mo-br100" alt="Client Photo" />
+      <h3>Prayas Sharma</h3>
       <p class="company">Living Through Art Tattoos</p>
       <div class="stars" aria-label="5 stars"></div>
-      <p class="feedback">I had an incredible experience! The tattoo artist perfectly captured my vision with stunning detail. The studio's cleanliness, professionalism, and welcoming atmosphere made for a truly exceptional visit. Highly recommended!</p>
+      <p class="feedback">I had an incredible experience at the Livin through art! From the moment I walked in, I felt completely at ease.Tushar was not only professional but genuinely welcoming and attentive.He took the time to understand exactly what I wanted, answered all my questions, and made sure I felt comfortable every step of the way.</p>
     </div>
 
     <div class="testimonial-card">
