new file:   Stuff/slideimage1..png 	modified:   Stuff/slideimage1.png 	modified:   aboutus.html 	modified:   artgallery.html 	modified:   contact.html 	modified:   css/style.css 	modified:   faqs.html 	modified:   index.html 	modified:   service.html

--- a/artgallery.html
+++ b/artgallery.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>Living Through Art Tattoos | Art Gallery</title>
-
+  <link rel="icon" type="image/x-icon" href="Stuff/loader.gif" />
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -294,21 +294,21 @@
                 <li><a>Tattoos Aftercare Guidance</a></li>
             </ul>
           </div>
-          <div class="col-md-3">
-            <div class="col-md-3">
-              <h5><B>
-                STUDIO TIMING
-              </B></h5>
-              <ul>
-                <li><a>Monday to Saturday</a></li>
-                <li><a>(12 PM - 8 PM)</a></li>
-                <li><a>Sunday Closed</a></li>
-              </ul>
+          <section class="studio-timing-section">
+            <div class="container">
+              <div class="studio-timing-box">
+                <h5><strong>Studio Timing</strong></h5>
+                <ul>
+                  <li>Monday to Saturday</li>
+                  <li>(12 PM – 8 PM)</li>
+                  <li>Sunday Closed</li>
+                </ul>
+              </div>
             </div>
-          </div>
+          </section>
         </div>
-      </div>
-    </section>
+        </div>
+        </section>
     
   
   
