--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>Living through Art Tattoos | About us</title>
-
+  <link rel="icon" type="image/x-icon" href="Stuff/loader.gif" />
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -116,7 +116,7 @@
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
           <div class="fruit_img-box d-flex justify-content-center align-items-center">
-            <img src="Stuff/about1.jpg" alt="" class="" width="300px" />
+            <img src="Stuff/about1.jpg" alt="" class="" width="350px" />
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
           <div class="fruit_img-box d-flex justify-content-center ">
-            <img src="Stuff/about2.jpg" alt="" class="" width="300px" />
+            <img src="Stuff/about2.jpg" alt="" class="" width="350px" />
           </div>
         </div>
       </div>        
@@ -273,22 +273,21 @@
               <li><a>Tattoos Aftercare Guidance</a></li>
           </ul>
         </div>
-        <div class="col-md-3">
-          <div class="col-md-3">
-            <h5><B>
-              STUDIO TIMING
-            </B></h5>
-            <ul>
-              <li><a>Monday to Saturday</a></li>
-              <li><a>(12 PM - 8 PM)</a></li>
-              <li><a>Sunday Closed</a></li>
-            </ul>
+        <section class="studio-timing-section">
+          <div class="container">
+            <div class="studio-timing-box">
+              <h5><strong>Studio Timing</strong></h5>
+              <ul>
+                <li>Monday to Saturday</li>
+                <li>(12 PM – 8 PM)</li>
+                <li>Sunday Closed</li>
+              </ul>
+            </div>
           </div>
-        </div>
+        </section>
       </div>
-    </div>
-  </section>
-  
+      </div>
+      </section>
 
 
 
