--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>Living Through Art Tattoos</title>
-
+  <link rel="icon" type="image/x-icon" href="Stuff/loader.gif" />
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -211,14 +211,14 @@
             </div>
           </div>
         </div>
-        <!-- <div class="custom_carousel-control">
+        <div class="custom_carousel-control">
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
             <span class="sr-only">Next</span>
           </a>
-        </div> -->
+        </div>
       </div>
     </section>
 
@@ -313,7 +313,7 @@
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
           <div class="fruit_img-box d-flex justify-content-center align-items-center">
-            <img src="Stuff/about1.jpg" alt="" class="" width="250px" height="200" />
+            <img src="Stuff/about1.jpg" alt="" class="" width="350px" />
           </div>
         </div>
       </div>
@@ -338,7 +338,7 @@
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
           <div class="fruit_img-box d-flex justify-content-center ">
-            <img src="Stuff/about2.jpg" alt="" class="" width="250px" height="200" />
+            <img src="Stuff/about2.jpg" alt="" class="" width="350px" />
           </div>
         </div>
       </div>
@@ -758,6 +758,9 @@
             </div>
           </div>
         </section>
+      </div>
+      </div>
+      </section>
   
 
 
