deleted:    Stuff/slide-img2.jpg 	deleted:    Stuff/slide-img3.jpg 	deleted:    Stuff/slideimage1..png 	new file:   Stuff/slideimage1.jpg 	deleted:    Stuff/slideimage1.png 	new file:   Stuff/slideimage2.jpg 	deleted:    Stuff/slideimage2.png 	new file:   Stuff/slideimage3.jpg 	deleted:    Stuff/slideimage3.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="col-md-6">
                       <div class="slider_img-box">
                         <div>
-                          <img src="Stuff/slideimage1.png" alt="" class="" />
+                          <img src="Stuff/slideimage1.jpg" alt="" class="" />
                         </div>
                       </div>
                     </div>
@@ -163,7 +163,7 @@
                     <div class="col-md-6">
                       <div class="slider_img-box">
                         <div>
-                          <img src="Stuff/slideimage2.png" alt="" class="" />
+                          <img src="Stuff/slideimage2.jpg" alt="" class="" />
                         </div>
                       </div>
                     </div>
@@ -201,7 +201,7 @@
                     <div class="col-md-6">
                       <div class="slider_img-box">
                         <div>
-                          <img src="Stuff/slideimage3.png" alt="" class="" />
+                          <img src="Stuff/slideimage3.jpg" alt="" class="" />
                         </div>
                       </div>
                     </div>
